--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -72,8 +72,14 @@
 
                     <!-- Save Shipping Address and Remember Me Buttons -->
                     <div class="form-group">
-                        <button type="button" id="save-shipping-address" class="btn btn-secondary">Save Shipping Address</button>
-                        <button type="button" id="remember-me" class="btn btn-secondary">Remember Me Next Time</button>
+                        <div class="form-check">
+                            <input type="checkbox" id="save-shipping-address" name="save_shipping_address" class="form-check-input">
+                            <label for="save-shipping-address" class="form-check-label">Save Shipping Address</label>
+                        </div>
+                        <div class="form-check">
+                            <input type="checkbox" id="remember-me" name="remember_me" class="form-check-input">
+                            <label for="remember-me" class="form-check-label">Save for Quicker Checkout</label>
+                        </div>
                     </div>
                 </fieldset>
 
@@ -113,9 +119,9 @@
 </div>
 {% endblock %}
 
-{% block postloadjs %}
+{% block extra_js %}
     {{ block.super }}
     {{ stripe_public_key|json_script:"id_stripe_public_key" }}
     {{ client_secret|json_script:"id_client_secret" }}
-    <script src="{% static 'checkout/js/stripe_elements.js' %}"></script>
-{% endblock %}
+    <script src="{% static 'js/stripe_elements.js' %}"></script>
+    {% endblock %}
