--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -53,7 +53,7 @@
             </span>
             <span class="font-weight-bold">Return to Homepage</span>
         </a>
-        <a href="{% url 'shop' %}" class="btn btn-black rounded-0">
+        <a href="{% url 'product_list' %}" class="btn btn-black rounded-0">
             <span class="icon">
                 <i class="fas fa-shopping-bag"></i>
             </span>
