--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -99,9 +99,11 @@
                 Spend €{{ free_delivery_delta|floatformat:2 }} more for free delivery!
             </p>
         {% endif %}
-        <a href="{% url 'checkout' %}" class="btn btn-success btn-lg mt-4">
-            <i class="fas fa-lock"></i> Proceed to Checkout
-        </a>
+        {% if bag_items %}
+            <a href="{% url 'checkout' %}" class="btn btn-primary">Proceed to Checkout</a>
+        {% else %}
+            <button class="btn btn-secondary" disabled>Your cart is empty</button>
+        {% endif %}
     </div>
 </div>
 {% endblock %}
