--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -20,6 +20,7 @@
             <div class="col">
                 <hr>
                 <h2 class="logo-font mb-4">My Profile</h2>
+                <p>Welcome, {{ user.username }}!</p>
                 <hr>
 
                 <h2>Manage Shipping Addresses</h2>
@@ -37,6 +38,20 @@
                             <a href="{% url 'edit_address' address.id %}">Edit</a> |
                             <a href="{% url 'delete_address' address.id %}">Delete</a>
                         </li>
+                    {% empty %}
+                        <li>You have no saved addresses.</li>
+                    {% endfor %}
+                </ul>
+
+                <h3 class="mt-5">Previous Orders</h3>
+                <ul>
+                    {% for order in orders %}
+                        <li>
+                            Order #{{ order.order_number }} - {{ order.date }}
+                            <a href="{% url 'order_detail' order.id %}">View Details</a>
+                        </li>
+                    {% empty %}
+                        <li>You have no previous orders.</li>
                     {% endfor %}
                 </ul>
             </div>
