--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -83,6 +83,28 @@
                     </div>
                 </fieldset>
 
+                {% if not user.is_authenticated %}
+                  <fieldset class="px-3 mb-4">
+                    <legend class="fieldset-label small text-black px-2 w-auto">Create Account</legend>
+                    <div class="form-group">
+                      <div class="form-check">
+                        <input type="checkbox" id="create-profile" name="create_user_profile" class="form-check-input">
+                        <label for="create-profile" class="form-check-label">Create a profile for faster checkout next time</label>
+                      </div>
+                    </div>
+                    <div id="password-fields" style="display: none;">
+                      <div class="form-group">
+                        <label for="password">Password</label>
+                        <input type="password" id="password" name="password" class="form-control">
+                      </div>
+                      <div class="form-group">
+                        <label for="password2">Confirm Password</label>
+                        <input type="password" id="password2" name="password2" class="form-control">
+                      </div>
+                    </div>
+                  </fieldset>
+                {% endif %}
+
                 <!-- Stripe Payment Details -->
                 <fieldset class="px-3">
                     <legend class="fieldset-label small text-black px-2 w-auto">Payment</legend>
@@ -128,4 +150,5 @@
     {{ stripe_public_key|json_script:"id_stripe_public_key" }}
     {{ client_secret|json_script:"id_client_secret" }}
     <script src="{% static 'js/stripe_elements.js' %}"></script>
+    <script src="{% static 'checkout/js/checkout.js' %}"></script>
     {% endblock %}
