--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -15,6 +15,9 @@
     <div class="alert alert-info text-center">
         <strong>Gift Message:</strong> {{ order.gift_message }}
     </div>
+    <p class="text-center text-success">
+        Your personalised message will be added to your order.
+    </p>
     {% endif %}
 
     <div class="row">
