--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -21,7 +21,7 @@
         {% else %}
           <!-- If nobody is logged in, show Sign Up / Log In -->
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'login' %}">Sign Up / Log In</a>
+            <a class="nav-link" href="{% url 'account_login' %}">Sign Up / Log In</a>
           </li>
         {% endif %}
           <li class="nav-item">
